# Nebula

./: .gitignore  .gitmodules  CMakeLists.txt
Nebula/: CMakeLists.txt
Nebula/eikon/: CMakeLists.txt  Eikon.hpp  main.cpp
Nebula/eikon/base/: Application.cpp  Application.hpp  Timer.hpp  UIItem.hpp  UserInterface.cpp  UserInterface.hpp
Nebula/eikon/base/config/: Configuration.hpp
Nebula/eikon/base/ui/: DebugStatsItem.cpp  DebugStatsItem.hpp
Nebula/eikon/render/: ImGuiRenderer.cpp  ImGuiRenderer.hpp
Nebula/eikon/scene/: Scene.hpp
Nebula/eikon/wsi/: Window.cpp  Window.hpp
Nebula/ndx/: CMakeLists.txt  dx12_Window.hpp  dx12_test.cpp
Nebula/ndx/include/ndx/: DX12CommandList.hpp  DX12Context.hpp  DX12Descriptor.hpp  DX12Device.hpp  DX12Pipeline.hpp  DX12PipelineLibrary.hpp  DX12Shader.hpp  DX12Swapchain.hpp  IWindow.hpp
Nebula/ndx/internal/: core.cpp  core.hpp
Nebula/ndx/ndx/: CMakeLists.txt  Context.cpp  Context.hpp  Device.cpp  Device.hpp  IWindow.hpp  Instance.cpp  Instance.hpp  Size.hpp  Struct.hpp  Swapchain.cpp  Swapchain.hpp  Utility.hpp  _rhi.hpp  _rhi_dx12_enums.hpp  _rhi_enum_to_string.hpp  _rhi_enums.hpp  _rhi_struct.hpp
Nebula/ndx/ndx/pipeline/: Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
Nebula/ndx/src/: DX12CommandList.cpp  DX12Context.cpp  DX12Device.cpp  DX12Pipeline.cpp  DX12Shader.cpp  DX12Swapchain.cpp
Nebula/ndx/test/: TestWindow.hpp  main.cpp
Nebula/nebula/: CMakeLists.txt  main.cpp
Nebula/nebula/common/: RingArray.hpp  Size2D.hpp
Nebula/nebula/napp/: AppConfig.cpp  AppConfig.hpp  Application.cpp  Application.hpp
Nebula/nebula/ncommon/: Measure.hpp  RingArray.hpp  Size2D.hpp
Nebula/nebula/ngui/: GUI.cpp  GUI.hpp
Nebula/nebula/nhair/: HairModel.cpp  HairModel.hpp  HairRenderer.cpp  HairRenderer.hpp
Nebula/nebula/nmath/: Transform.hpp  Utility.cpp  Utility.hpp
Nebula/nebula/nmath/algorithm/: BFS.cpp  BFS.hpp  TopologicalSort.cpp  TopologicalSort.hpp
Nebula/nebula/nmath/graph/: Vertex.cpp  Vertex.hpp
Nebula/nebula/nrender/: DebugRenderer.hpp  Present.cpp  Present.hpp  Raytracer.cpp  Raytracer.hpp  SBuffer.hpp
Nebula/nebula/nrg/common/: Context.hpp  INode.hpp  Node.cpp  Node.hpp  NodeConfiguration.hpp  NodeTraits.hpp  NodeType.hpp  RenderPath.cpp  RenderPath.hpp  Resource.hpp  ResourceClaim.hpp  ResourceSpecification.hpp  ResourceTraits.hpp
Nebula/nebula/nrg/compiler/: CompilerResult.hpp  CompilerStrategy.cpp  CompilerStrategy.hpp  NodeFactory.hpp  ResourceFactory.hpp
Nebula/nebula/nrg/compiler/factory/: NodeFactory.cpp  NodeFactory.hpp  ResourceFactory.cpp  ResourceFactory.hpp
Nebula/nebula/nrg/compiler/optimized/: OptimizedCompiler.cpp  OptimizedCompiler.hpp  ResourceOptimizer.cpp  ResourceOptimizer.hpp
Nebula/nebula/nrg/editor/: Edge.hpp  EditorNode.cpp  EditorNode.hpp  EditorNodeFactory.cpp  EditorNodeFactory.hpp  Graph.hpp  GraphEditor.cpp  GraphEditor.hpp
Nebula/nebula/nrg/node/: AmbientOcclusion.cpp  AmbientOcclusion.hpp  AntiAliasing.cpp  AntiAliasing.hpp  DeferredLighting.cpp  DeferredLighting.hpp  GBuffer.cpp  GBuffer.hpp  Nodes.hpp  Present.cpp  Present.hpp  SceneDataProvider.cpp  SceneDataProvider.hpp  _Template.md
Nebula/nebula/nrg/nodes/: AntiAliasing.cpp  AntiAliasing.hpp  Nodes.hpp  SceneDataProvider.cpp  SceneDataProvider.hpp
Nebula/nebula/nrg/resource/: Requirement.hpp  Resource.hpp  Resources.hpp
Nebula/nebula/nscene/: Camera.cpp  Camera.hpp  DefaultScene.hpp  GTLFScene.hpp  Light.hpp  Object.hpp  Scene.cpp  Scene.hpp  Vertex.hpp
Nebula/nebula/nscene/geometry/: Geometry.cpp  Geometry.hpp  Mesh.cpp  Mesh.hpp
Nebula/nebula/nscene/geometry/primitives/: Cube.cpp  Cube.hpp  Sphere.cpp  Sphere.hpp
Nebula/nebula/render/basic/: Material.hpp  Texture.cpp  Texture.hpp
Nebula/nebula/wsi/: Window.cpp  Window.hpp  WindowCreateInfo.hpp
Nebula/nvk/: CMakeLists.txt
Nebula/nvk/include/nvk/: Barrier.hpp  Buffer.hpp  Command.hpp  Context.hpp  Descriptor.hpp  Device.hpp  DeviceExtensions.hpp  IWindow.hpp  Image.hpp  Swapchain.hpp  Utility.hpp
Nebula/nvk/include/nvk/render/: Framebuffer.hpp  Pipeline.hpp  PipelineCreateInfo.hpp  PipelineType.hpp  RenderPass.hpp  Shader.hpp  VertexInput.hpp
Nebula/nvk/include/nvk/rt/: BLAS.hpp  ShaderBindingTable.hpp  TLAS.hpp
Nebula/nvk/internal/: Utilities.hpp
Nebula/nvk/nvk/: Barrier.cpp  Barrier.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Command.cpp  Context.cpp  Descriptor.cpp  Descriptor.hpp  Device.cpp  DeviceExtensions.hpp  Image.cpp  Instance.cpp  Instance.hpp  Queue.cpp  Queue.hpp  Swapchain.cpp  Utility.cpp  Utility.hpp
Nebula/nvk/nvk/ops/: ImageBlit.hpp  ImageResolve.hpp
Nebula/nvk/nvk/render/: Framebuffer.cpp  Framebuffer.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCreateInfo.cpp  PipelineCreateInfo.hpp  PipelineState.cpp  PipelineState.hpp  RenderPass.cpp  Shader.cpp
Nebula/nvk/nvk/rt/: BLAS.hpp  ShaderBindingTable.hpp  TLAS.hpp
Nebula/nvk/src/: Buffer.cpp  Command.cpp  Context.cpp  Descriptor.cpp  Device.cpp  DeviceExtensions.cpp  Image.cpp  Instance.cpp  Queue.cpp  Swapchain.cpp  Utility.cpp
Nebula/nvk/src/render/: Framebuffer.cpp  Pipeline.cpp  PipelineCreateInfo.cpp  PipelineState.cpp  RenderPass.cpp  Shader.cpp
Nebula/nvk/src/rt/: BLAS.cpp  ShaderBindingTable.cpp  TLAS.cpp
Nebula/nvk_gen2/: CMakeLists.txt
Nebula/nvk_gen2/include/nvk/: VulkanDevice.hpp  VulkanExtension.hpp  VulkanLayer.hpp  VulkanRHI.hpp  VulkanUtil.hpp
Nebula/nvk_gen2/src/: VulkanExtension.cpp  VulkanLayer.cpp  VulkanRHI.cpp  test.cpp
Nebula/samples/: CMakeLists.txt  nbl_application.cpp  nvk_hello_triangle.cpp
Nebula/test/: CMakeLists.txt  ring_array_test.cpp
Projects/: CMakeLists.txt
Projects/hair/: CMakeLists.txt  HairRendererApp.cpp  HairRendererApp.hpp  main.cpp
Projects/raytracer/: CMakeLists.txt  RaytracerApp.cpp  RaytracerApp.hpp  main.cpp
Projects/rendergraph/: CMakeLists.txt  RenderGraphApp.cpp  RenderGraphApp.hpp  main.cpp
Projects/vk-playground/: CMakeLists.txt  VkPlayground.cpp  VkPlayground.hpp
Resources/: napp_config.json  nrg_config.json
Shaders/: compile_shaders.py
Shaders/glsl/: fullscreen_quad.vert  raytracer.rchit  (+17 more)
(+24 files in other folders)
